<resources>
    <string name="app_name">Daedalus</string>
    <string name="quick_toggle">Toggle</string>

    <string name="notice_activated">iTXTech Daedalus is activated.</string>
    <string name="notice_start_test">Testing specified DNS server…</string>
    <string name="notice_queries">DNS query times:</string>
    <string name="notice_need_restart">Re-activate Daedalus to make the settings take effect.</string>
    <string name="notice_start_download">Downloading rule, please wait …</string>
    <string name="notice_downloaded">Rule has been downloaded.</string>
    <string name="notice_download_failed">Download failed.</string>
    <string name="notice_now_downloading">Daedalus is currently downloading rule, please wait.</string>
    <string name="notice_fill_in_all">Please fill in all configuration items.</string>
    <string name="notice_delete_confirm_prompt">Are you sure you want to remove this configuration?</string>
    <string name="notice_after_stop">Please modify activated rules after stopping service.</string>
    <string name="notice_check_dynamic_rule_reload">Please enable "Allow dynamic rule reload" in Settings</string>
    <string name="notice_export_complete">Export completed.</string>
    <string name="notice_importing_rule">Importing rule… Please wait until blanks are filled.</string>

    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="action_dns_test">Test</string>
    <string name="action_start_test">Start Test</string>
    <string name="action_home">Home</string>
    <string name="action_rules">Rules</string>
    <string name="action_dns_servers">Servers</string>
    <string name="action_removed">Removed.</string>
    <string name="action_undo">Undo</string>
    <string name="action_log">Log</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_reload">Reload</string>

    <string name="delete">Delete</string>
    <string name="apply">Apply</string>
    <string name="export">Export</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="button_text_activate">Activate</string>
    <string name="button_text_deactivate">Deactivate</string>

    <string name="config_dns_server">DNS server config</string>
    <string name="config_rule">Rule config</string>

    <string name="settings_system">System Settings</string>
    <string name="server_sduqd" translatable="false">sdu qd server</string>
    <string name="server_smart" translatable="false">smart dns</string>
    <string name="settings_boot">Activate on Boot</string>
    <string name="settings_server">Server Settings</string>
    <string name="settings_notification">Show Notification</string>
    <string name="settings_check_update">Check Update</string>
    <string name="settings_update_summary">Visit GitHub Releases Page.</string>
    <string name="settings_privacy_policy">Privacy Policy</string>
    <string name="settings_count_number_of_queries">Count DNS Query Times</string>
    <string name="settings_bug_report">Report a Bug</string>
    <string name="settings_issue_summary">Submit an Issue on GitHub Issues Page.</string>
    <string name="settings_dns_test_servers">DNS Test Servers</string>
    <string name="settings_help_and_support">Help &amp; Support</string>
    <string name="settings_advanced">Advanced System Settings</string>
    <string name="settings_advanced_on">On</string>
    <string name="settings_log_size">Log Size Limit</string>
    <string name="settings_manual">Manual</string>
    <string name="settings_manual_summary">Visit GitHub wiki page.</string>
    <string name="settings_dont_build_cache">Don\'t cache IP for DNS servers</string>
    <string name="settings_debug_output">Debug Output</string>
    <string name="settings_dark_theme">Use Dark Theme</string>
    <string name="settings_dns_query_method">DNS Query Method</string>
    <string name="settings_foreground">Run service in Foreground</string>
    <string name="settings_use_system_dns">Use System DNS as upstream DNS</string>

    <string name="settings_dns_tcp">TCP</string>
    <string name="settings_dns_udp">UDP</string>
    <string name="settings_dns_tls">TLS</string>
    <string name="settings_dns_https_ietf">HTTPS (RFC8484)</string>
    <string name="settings_dns_https_json">HTTPS (Google JSON)</string>

    <string name="settings_rule_name">Rule Name</string>
    <string name="settings_rule_type">Rule Type</string>
    <string name="settings_rule">Rule Settings</string>
    <string name="settings_rule_download_url">Rule Download URL</string>
    <string name="settings_rule_sync">Sync Rule</string>
    <string name="settings_rule_filename">Rule Filename</string>
    <string name="settings_rule_import">Import</string>
    <string name="settings_rule_import_built_in">Built-in</string>
    <string name="settings_rule_import_external">External</string>

    <string name="settings_server_name">Server Name</string>
    <string name="settings_server_address">Server Address</string>
    <string name="settings_server_port">Server Port</string>

    <string name="settings_app_filter">App Filter</string>
    <string name="settings_app_filter_mode">Blacklist mode</string>
    <string name="settings_app_filter_list">Select application</string>
    <string name="settings_app_filter_list_summary">Select apps to pass through</string>

    <string name="server_twnic_primary">Quad 101 Primary</string>
    <string name="server_twnic_secondary">Quad 101 Secondary</string>
    <string name="server_rubyfish">rubyfish (DoH)</string>
    <string name="server_cloudflare">Cloudflare DNS (DoH)</string>
    <string name="server_google_json">Google Public DNS (DoH JSON)</string>
    <string name="server_google_ietf">Google Public DNS (DoH RFC8484)</string>

    <string name="primary_server">Primary DNS server</string>
    <string name="secondary_server">Secondary DNS server</string>

    <string name="test_domain">Test Domain:</string>
    <string name="test_time_used">Time Used:</string>
    <string name="test_dns_server">DNS Server:</string>
    <string name="test_result_resolved">Address:</string>
    <string name="test_failed">DNS query failed. Timeout or unknown hostname.</string>
    <string name="test_test_domain">google.com</string>

    <string name="nav_version">Version:</string>
    <string name="nav_git_commit">Git commit:</string>
    <string name="nav_github">GitHub</string>

    <string name="error_occurred">An error occurred at startup</string>
</resources>
